Fix initial blockquote spacing

--- a/default/partials/_base-typography.scss
+++ b/default/partials/_base-typography.scss
@@ -124,6 +124,10 @@ dl {
     & + blockquote {
         padding-top: 0;
     }
+    h1 + &, h2 + &, h3 + &,
+    h4 + &, h5 + &, h6 + & {
+        padding-top: 0;
+    }
 }
 blockquote {
     @include blockquote();
